# typedb-web

./: .babelrc  .bazelignore  .bazelrc  .gitattributes  .gitignore  .gitmodules  BUILD  README.md  WORKSPACE  app.json  atvImg.js  browserconfig.xml  build-docs.sh  build.sh  deployment.bzl  get_javadocs.sh  get_restapidocs.sh  gulpfile.js  hello.nomad  index.html  main.js  mindmaps.appcache  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  robots.txt  server-docs.js  server-website.js  server.js  sitemap.xml  sitemap.xsl  three.min.js  vanillaSmoothScroller.js  webpack.config.js  webpack.production.js  website.nomad
api/: cors.js  (+1 more)
cms/: .gitignore  BUILD.bazel  config.ts  package.json  pnpm-lock.yaml  sanity.cli.ts  sanity.config.ts
cms/config/: database.ts
cms/scripts/: README.md  deleteDocumentsByType.js  migrateDocumentType.js  renameField.js  updateSingleValue.js
strapi/: .env.example  BUILD.bazel  package.json  tsconfig.json
strapi/config/: cron-tasks.ts  database.ts  server.ts
strapi/src/api/food/content-types/food/: schema.json
strapi/src/api/person/content-types/person/: schema.json
strapi/src/api/restaurant/content-types/restaurant/: schema.json
strapi/src/api/use-case-article/content-types/use-case-article/: schema.json
strapi/src/api/use-case-article/controllers/: use-case-article.ts
strapi/src/api/use-case-article/routes/: use-case-article.ts
strapi/src/api/use-case-article/services/: use-case-article.ts
strapi/src/api/webinars-page/controllers/: webinars-page.js
strapi/src/api/webinars-page/routes/: webinars-page.js
strapi/src/api/webinars-page/services/: webinars-page.js
strapi/src/components/common/: hubspot-link.json  page-header.json
strapi/src/components/general/: hubspot-link.json  hyperlink.json  key-point-panels.json
strapi/src/components/use-case-section/: test.json  use-case-article-section.json  use-case-section1.json  use-case-section2.json  use-case-section3.json
(+2405 files in other folders)
